Fix overflow scrolling

--- a/taui/src/sass/05_base/_base.scss
+++ b/taui/src/sass/05_base/_base.scss
@@ -23,7 +23,6 @@ body {
     align-items: stretch;
     width: 100%;
     height: 100vh;
-    overflow: hidden;
     background-color: $bg-gray;
 }
 
