--- a/taui/src/sass/06_components/_app-header.scss
+++ b/taui/src/sass/06_components/_app-header.scss
@@ -18,6 +18,7 @@
     @include text(300);
     margin-right: 1.6rem;
     color: $gray-600;
+    white-space: nowrap;
 
     &--new {
       margin-left: 6.4rem;
